@startuml
title Mastery Task 3 changes
'https://plantuml.com/class-diagram

abstract class Packaging {
  -material: Material
  +getMass(): BigDecimal
  +canFitItem(Item): boolean
}

class Box {
  -length: BigDecimal
  -width: BigDecimal
  -height: BigDecimal
  +getMass(): BigDecimal
  +canFitItem(Item): boolean
}

class PolyBag {
  -volume: BigDecimal
  +getMass(): BigDecimal
  +canFitItem(Item): boolean
}

enum Material {
  + CORRUGATE
  + LAMINATED_PLASTIC
}

Box --|> Packaging
PolyBag --|> Packaging
Packaging *-- Material

@enduml